--- a/C_First/CMakeLists.txt
+++ b/C_First/CMakeLists.txt
@@ -3,4 +3,4 @@ project(C_First C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(C_First test/addTwoNumber.c test/test.c main.c static.c test2/main.c test2/support.c loop.c callMethodByRef.c array.c enum.c enum2.c pointer.c MethodPointer.c MethodPointer2.c string.c)
+add_executable(C_First test/addTwoNumber.c test/test.c main.c static.c test2/main.c test2/support.c loop.c callMethodByRef.c array.c enum.c enum2.c pointer.c MethodPointer.c MethodPointer2.c string.c struct.c union.c char.c)
