--- a/C_Second/CMakeLists.txt
+++ b/C_Second/CMakeLists.txt
@@ -3,4 +3,4 @@ project(C_Second C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(C_Second main.c ff.c file.c preprocessor.c)
+add_executable(C_Second main.c ff.c file.c preprocessor.c error.c recursion.c)
