--- a/C_Second/CMakeLists.txt
+++ b/C_Second/CMakeLists.txt
@@ -3,4 +3,4 @@ project(C_Second C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(C_Second main.c ff.c file.c preprocessor.c error.c recursion.c)
+add_executable(C_Second main.c ff.c file.c preprocessor.c error.c recursion.c multiParams.c alloc.c cmd.c 冒泡排序.c 选择排序.c "插入排序.c" 希尔排序.c 归并排序iter.c 快速排序iter.c)
