--- a/Cpp_1/CMakeLists.txt
+++ b/Cpp_1/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Cpp_1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Cpp_1 main.cpp main2.cpp call.cpp rand.cpp array.cpp array2.cpp)
+add_executable(Cpp_1 main.cpp main2.cpp call.cpp rand.cpp array.cpp array2.cpp string.cpp pointer.cpp ref.cpp inout.cpp)
